# lib/db/src/schema/pendaftar.ts
@@ -23,9 +23,9 @@ export const pendaftarTable = pgTable("pendaftar", {
   riwayat_penyakit: text("riwayat_penyakit"),
   transportasi: text("transportasi").notNull(),
   jarak_sekolah: text("jarak_sekolah").notNull(),
-  nama_sekolah_asal: text("nama_sekolah_asal").notNull(),
-  tahun_lulus: integer("tahun_lulus").notNull(),
-  alamat_sekolah_asal: text("alamat_sekolah_asal").notNull(),
+  nama_sekolah_asal: text("nama_sekolah_asal"),
+  tahun_lulus: integer("tahun_lulus"),
+  alamat_sekolah_asal: text("alamat_sekolah_asal"),
   nomor_kk: text("nomor_kk").notNull(),
   nik_orangtua: text("nik_orangtua").notNull(),
   nomor_hp_orangtua: text("nomor_hp_orangtua").notNull(),
